--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!-- TODO: 005 Transferir o ConstraintLayout para dentro de um ScroolView -->
+<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
 
     xmlns:android="http://schemas.android.com/apk/res/android"
