--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,8 @@
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:layout_marginTop="16dp"
+            android:visibility="invisible"
+            tools:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_load_data" />
