--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,47 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
 
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        tools:context=".MainActivity">
 
         <Button
-            android:id="@+id/btn_load_data"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/button_load_data"
+            android:text="Carregar"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="32dp"
-            android:text="@string/carregar"
-            app:layout_constraintTop_toBottomOf="parent" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
         <TextView
-            android:id="@+id/tv_data"
+            android:id="@+id/textview_data"
+            app:layout_constraintTop_toBottomOf="@id/button_load_data"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-condensed"
+            android:layout_marginTop="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="sans-serif-condensed"
-            android:textSize="20sp"
-            app:layout_constraintTop_toBottomOf="@id/btn_load_data"
-            tools:text="Nome exemplo" />
+            tools:text="Nome Exemplo"
+            />
 
         <ProgressBar
-            android:id="@+id/pb_load_indicator"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:layout_marginTop="16dp"
-            android:visibility="invisible"
-            tools:visibility="visible"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:id="@+id/progressbar_load_indicator"
+            app:layout_constraintTop_toBottomOf="@id/button_load_data"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_load_data" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_marginTop="16dp"
+            android:layout_width="42dp"
+            android:layout_height="42dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
